--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --color-text: #111;
+  --color-text-light: #666;
   --color-bg: #fff;
   --color-border: #ccc;
   --color-link: #0645ad;
@@ -9,6 +10,7 @@
 
 [data-theme="dark"] {
   --color-text: #eee;
+  --color-text-light: #bbb;
   --color-bg: #111;
   --color-border: #444;
   --color-link: #8ab4f8;
@@ -59,18 +61,22 @@ header {
 
 h1 {
   font-size: 1.75rem;
+  margin: 0.75rem 0;
 }
 
 h2 {
   font-size: 1.5rem;
+  margin: 0.5rem 0;
 }
 
 h3 {
   font-size: 1.25rem;
+  margin: 0.5rem 0;
 }
 
 h4 {
   font-size: 1.1rem;
+  margin: 0.25rem 0;
 }
 
 header h2 {
@@ -146,8 +152,4 @@ code {
   .header-github-link {
     display: none;
   }
-}
-
-.subtitle {
-  font-size: 1.1em;
 }
