--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -29,12 +29,16 @@
     <meta property="og:description" content="도구를 마법처럼 바라보지 않기" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://archive.witch.work/" />
-    <meta property="og:image" content="/witch-archive.png" />
+    <meta property="og:image" content="/assets/witch-archive.png" />
     <meta property="og:site_name" content="Witch's Archive" />
     <meta property="og:locale" content="ko_KR" />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-icon.png"
+    />
   </head>
   <body>
     <header>
