테마 토글 버튼 주석처리, code highlight css import

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,7 +15,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="/styles/prism-one-light.css" />
+    <!-- <link rel="stylesheet" href="/styles/prism-material-dark.css" /> -->
     <title>{{ title }}</title>
     <meta
       name="description"
@@ -41,10 +43,10 @@
     />
   </head>
   <body>
-    <button id="theme-toggle" aria-label="Toggle theme">
+    <!-- <button id="theme-toggle" aria-label="Toggle theme">
       <span class="icon-light">🌙 dark</span>
       <span class="icon-dark">☀️ light</span>
-    </button>
+    </button> -->
     <header>
       <h1>{{ title }}</h1>
       <nav>
