--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,7 @@ body {
     Helvetica Neue, Arial, sans-serif;
   background-color: var(--color-bg);
   color: var(--color-text);
-  padding: 0 1rem;
+  padding: 2rem 1rem;
   width: 100%;
   max-width: 60rem;
   margin: 0 auto;
